# neodym

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  INSTALLATION.md  README.md
.github/workflows/: rust.yml
crates/: readme.md
crates/arch/apic/: Cargo.toml
crates/arch/apic/src/: lapic.rs  lib.rs
crates/arch/x86_64/: Cargo.toml
crates/arch/x86_64/src/: gdt.rs  idt.rs  instructions.rs  lib.rs  paging.rs  registers.rs
crates/boot/limine/: Cargo.toml
crates/boot/limine/src/: bootloader_info.rs  entry_point.rs  framebuffer.rs  hhdm.rs  kernel_address.rs  lib.rs  memory_map.rs  module.rs  smp.rs
crates/init/: Cargo.toml
crates/kernel/: Cargo.toml  build.rs  x86_64.ld
crates/kernel/src/: init.rs  main.rs
crates/kernel/src/allocator/: mod.rs  paging.rs
crates/kernel/src/allocator/paging/: mod.rs  page_based_allocator.rs  page_box.rs  page_list.rs
crates/kernel/src/arch/: mod.rs
crates/kernel/src/arch/x86_64/: kernel_info.rs  logger.rs  mod.rs  paging.rs  process.rs  sys_info.rs  tables.rs
crates/kernel/src/arch/x86_64/interrupts/: errors.rs  exceptions.rs  mod.rs  system_call.rs
crates/kernel/src/arch/x86_64/interrupts/system_call/: memory.rs  mod.rs
crates/kernel/src/arch/x86_64/interrupts/system_calls/: mod.rs
crates/kernel/src/arch/x86_64/paging/: memory_mapper.rs  mod.rs  page_allocator.rs  page_box.rs
crates/kernel/src/boot/: mod.rs
crates/kernel/src/boot/limine/: mod.rs  x86_64.rs
crates/kernel/src/init/: elf.rs  mod.rs
crates/kernel/src/process/: init.rs  mod.rs  scheduler.rs
crates/kernel/src/x86_64/: memory_mapper.rs  mod.rs  paging.rs  sys_info.rs  tables.rs
crates/kernel/src/x86_64/boot/: mod.rs
crates/kernel/src/x86_64/boot/limine/: mod.rs  req.rs
crates/kernel/src/x86_64/interrupts/: apic.rs  exceptions.rs
crates/kernel/src/x86_64/paging/: identity_map.rs  mapping.rs  memory_mapper.rs  mod.rs  owned_mapper.rs  page_allocator.rs  page_provider.rs
crates/kernel/x86_64/: Cargo.toml  build.rs
crates/kernel/x86_64/src/: apic.rs  logger.rs  main.rs  sys_info.rs  tables.rs
crates/kernel/x86_64/src/boot/limine/: mod.rs
crates/kernel/x86_64/src/interrupts/system_call/: ring0.rs  terminate.rs
crates/lib/neodym-sys/: Cargo.toml
crates/lib/neodym-sys-common/: Cargo.toml
crates/lib/neodym-sys-common/src/: lib.rs  x86_64.rs
crates/lib/neodym-sys/src/: lib.rs  raw.rs  sched.rs  x86_64.rs
crates/nd_init/: build.rs  linker.ld  x86_64.ld
crates/nd_init/src/: main.rs
crates/utility/array/: Cargo.toml
crates/utility/array/src/: binary_heap.rs  (+4 more)
crates/utility/log/: Cargo.toml
crates/utility/spin/: Cargo.toml
docs/: boot.md  booting.md  notes.md  processes_and_resources.md  readme.md  system_calls.md
docs/system_calls/: x86_64.md
(+3 files in other folders)
