[workspace]
members = [
  "crates/kernel",
  "crates/init",
  "crates/boot/limine",
  "crates/arch/x86_64",
  "crates/lib/neodym-sys",
  "crates/utility/log",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/nils-mathieu/neodym"
