[workspace]
members = [
    "crates/kernel",
    "crates/nd_init",
    "crates/boot/limine",
    "crates/arch/x86_64",
    "crates/arch/apic",
    "crates/lib/neodym-sys-common",
    "crates/lib/neodym-sys",
    "crates/utility/log",
    "crates/utility/array",
]
resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Nils Mathieu <nils.mathieu.contact@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/nils-mathieu/neodym"
